package Models;

public interface ISensor {
    public boolean checkStatus();

    public double getData();
}
