package Models;

public enum TypeSensor {
    PRESSURE, TEMPERATURE
}
